# cpp_algorithm

./: CMakeLists.txt
.github/workflows/: ubuntu.yml  windows.yml
install/include/UseCudaLib-1.0/: UseCudaLib.h
install/include/UseCudaLib-1.0/usecudalib/: version.h
install/lib/cmake/UseCudaLib-1.0/: UseCudaLibConfig.cmake  UseCudaLibTargets-release.cmake  UseCudaLibTargets.cmake
install/lib/cmake/cxxopts/: cxxopts-targets.cmake
install/lib/pkgconfig/: cxxopts.pc
scripts/: run_cmake.sh
source/: UseCudaLib.cu
standalone/: CMakeLists.txt
test/: CMakeLists.txt
